[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "parachain-info"
version = "0.1.0"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.6'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-v1"
version = '2.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "rococo-v1"
version = '2.0.0'

[dependencies.cumulus-primitives]
git = 'https://github.com/paritytech/cumulus.git'
branch = "rococo-v1"
default-features = false

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "cumulus-primitives/std",
    "frame-support/std",
    "frame-system/std",
]
