[package]
name = 'pallet-template'
version = "3.0.0"
description = "FRAME pallet template for defining custom runtime logic."
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = "https://substrate.io/"
edition = '2018'
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
frame-system = { default-features = false, version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
frame-benchmarking = { default-features = false, version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12", optional = true }

[dev-dependencies]
sp-core = { default-features = false, version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sp-io = { default-features = false, version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sp-runtime = { default-features = false, version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
