[package]
name = "pallet-vesting"
description = "Pallet for minting tokens on a set schedule"
version = "1.0.0"
edition = "2021"
authors = ["OAK Developement Team"]
license = "GPL-3.0"
homepage = "https://oak.tech"
repository = 'https://github.com/OAK-Foundation/OAK-blockchain'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
log = { version = "0.4.16", default-features = false }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }

## Substrate FRAME Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.20" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }

## Substrate Pallet Dependencies
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }

parachain-staking = { git = "https://github.com/OAK-Foundation/moonbeam", default-features = false, branch = "oak-polkadot-v0.9.20" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
    "codec/std",
	"scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"parachain-staking/std",
]
